--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,10 @@
   box-sizing: border-box;
 }
 
+div {
+  overflow-x: hidden;
+}
+
 // typography
 a {
   text-decoration: none;
@@ -105,6 +109,31 @@ ion-icon {
   display: flex;
 }
 
+
+@media screen and (max-width:820px) {
+  .btn {
+    padding: 10px 15px;
+    font-size: 14px;
+  }
+
+  .divider {
+    height: 3px;
+    margin: 5px 0;
+  }
+
+  .main-header {
+    font-size: 45px;
+  }
+
+  .subheading {
+    font-size: 35px;
+  }
+
+  .subtitle {
+    font-size: 20px;
+  }
+}
+
 // main
 html {
   scroll-behavior: smooth;
@@ -168,6 +197,13 @@ nav {
   }
 }
 
+@media screen and (max-width:820px) {
+  header {
+    display: none;
+  }
+}
+
+
 .hero {
   padding: 50px 0;
   @include set-size;
@@ -183,7 +219,7 @@ nav {
     line-height: 30px;
   }
   .hero-buttons {
-    @include d-flex(flex-start);
+    @include d-flex;
     gap: 10px;
     margin: 20px 0;
     
@@ -196,9 +232,10 @@ nav {
   }
 }
 
+
 #about {
   margin-bottom: 50px !important;
-  background: url('/assets/blob_1.svg');
+  background: url('assets/blob_1.svg');
   background-attachment: fixed;
   @include set-size;
   @include d-flex;
@@ -241,6 +278,21 @@ nav {
     .counter {
       font-size: 45px;
     }
+  }
+}
+
+.cta {
+  padding: 100px 0;
+  height: 350px;
+  text-align: center;
+  background: $primary-color;
+  color: $black;
+  margin-bottom: 50px;
+
+  a {
+    width: fit-content;
+    margin: 20px auto;
+    text-align: center;
   }
 }
 
